Added Larviciding test; fixed checkpointing of one variable.
git-svn-id: https://openmalaria.googlecode.com/svn@2189 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/test/CMakeLists.txt
+++ b/trunk/test/CMakeLists.txt
@@ -31,6 +31,7 @@ set (OM_BOXTEST_NAMES
   VecFullTest
   VecTest
   VecMonthly
+  Larviciding
 )
 # tests with broken checkpointing:
 set (OM_BOXTEST_NC_NAMES)
