Renamed PerHostTransmission -> PerHost and AnophelesHumanParams -> Vector::PerHost (merge from vec-lifecycle branch).
git-svn-id: https://openmalaria.googlecode.com/svn@2233 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -45,10 +45,10 @@ set (Model_CPP
   
   Transmission/TransmissionModel.cpp
   Transmission/NonVector.cpp
-  Transmission/PerHostTransmission.cpp
+  Transmission/PerHost.cpp
   Transmission/Vector/VectorTransmission.cpp
   Transmission/Vector/VectorAnopheles.cpp
-  Transmission/Vector/AnophelesHumanParams.cpp
+  Transmission/Vector/PerHost.cpp
   Transmission/Vector/ITN.cpp
   Transmission/Vector/IRS.cpp
   
