Renames (more merges from vec-lifecycle branch).
Vector dir -> Anopheles dir, namespace
VectorAnopheles -> Anopheles::AnophelesModel
calcFourierEIR removed from AnophelesModel (was already added to util/vectors).

git-svn-id: https://openmalaria.googlecode.com/svn@2236 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -47,10 +47,10 @@ set (Model_CPP
   Transmission/NonVectorModel.cpp
   Transmission/VectorModel.cpp
   Transmission/PerHost.cpp
-  Transmission/Vector/VectorAnopheles.cpp
-  Transmission/Vector/PerHost.cpp
-  Transmission/Vector/ITN.cpp
-  Transmission/Vector/IRS.cpp
+  Transmission/Anopheles/AnophelesModel.cpp
+  Transmission/Anopheles/PerHost.cpp
+  Transmission/ITN.cpp
+  Transmission/IRS.cpp
   
   WithinHost/WithinHostModel.cpp
   WithinHost/CommonWithinHost.cpp
