Split AnophelesModel into three (some parts moved to Transmission, some to FixedEmergence).
This is partially a merge from the vec-lifecycle branch (Transmission),
partially a new development (FixedEmergence) which nevertheless will ease merge
(LifeCycle class).

git-svn-id: https://openmalaria.googlecode.com/svn@2239 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -48,6 +48,8 @@ set (Model_CPP
   Transmission/VectorModel.cpp
   Transmission/PerHost.cpp
   Transmission/Anopheles/AnophelesModel.cpp
+  Transmission/Anopheles/Transmission.cpp
+  Transmission/Anopheles/FixedEmergence.cpp
   Transmission/Anopheles/PerHost.cpp
   Transmission/ITN.cpp
   Transmission/IRS.cpp
