Moved common parts of FixedEmergence and LCEmergence classes into base. Included one more test from MosqLifeCycleSuite.
git-svn-id: https://openmalaria.googlecode.com/svn@2356 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -48,6 +48,7 @@ set (Model_CPP
   Transmission/VectorModel.cpp
   Transmission/PerHost.cpp
   Transmission/Anopheles/AnophelesModel.cpp
+  Transmission/Anopheles/EmergenceModel.cpp
   Transmission/Anopheles/MosqTransmission.cpp
   Transmission/Anopheles/FixedEmergence.cpp
   Transmission/Anopheles/LCEmergence.cpp
