Rewrote monthly input handling in EmergenceModel to use new logDFT function (with hack). Results minutely different (i.e. just floating-point errors).
git-svn-id: https://openmalaria.googlecode.com/svn@2359 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/unittest/CMakeLists.txt
+++ b/trunk/unittest/CMakeLists.txt
@@ -81,6 +81,7 @@ set (OM_CXXTEST_HEADERS
   DecayFunctionSuite.h
   PennyInfectionSuite.h
   MosqLifeCycleSuite.h
+  UtilVectorsSuite.h
 )
 
 #Appears to be problems with this on windows...
