Add some old TODO comments and change build-dir ignores.
git-svn-id: https://openmalaria.googlecode.com/svn@2364 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/.gitignore
+++ b/trunk/.gitignore
@@ -9,6 +9,5 @@ util/SchemaTranslator/translatedScenarios
 util/.metadata
 util/SchemaTranslator/*.class
 .sconsign.dblite
-build
-rel-build
+build*/
 lib
