New Simple Mosquito Population Dynamics code
git-svn-id: https://openmalaria.googlecode.com/svn@2365 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/CMakeLists.txt
+++ b/trunk/model/CMakeLists.txt
@@ -51,9 +51,10 @@ set (Model_CPP
   Transmission/Anopheles/EmergenceModel.cpp
   Transmission/Anopheles/MosqTransmission.cpp
   Transmission/Anopheles/FixedEmergence.cpp
-  Transmission/Anopheles/LCEmergence.cpp
-  Transmission/Anopheles/LifeCycle.cpp
-  Transmission/Anopheles/ResourceFitter.cpp
+  Transmission/Anopheles/SimpleMPDEmergence.cpp
+  #Transmission/Anopheles/LCEmergence.cpp
+  #Transmission/Anopheles/LifeCycle.cpp
+  #Transmission/Anopheles/ResourceFitter.cpp
   Transmission/Anopheles/PerHost.cpp
   Transmission/ITN.cpp
   Transmission/IRS.cpp
