--- a/trunk/unittest/CMakeLists.txt
+++ b/trunk/unittest/CMakeLists.txt
@@ -80,7 +80,7 @@ set (OM_CXXTEST_HEADERS
   AgeGroupInterpolationSuite.h
   DecayFunctionSuite.h
   PennyInfectionSuite.h
-  MosqLifeCycleSuite.h
+  #MosqLifeCycleSuite.h
   UtilVectorsSuite.h
 )
 
