--- a/trunk/test/CMakeLists.txt
+++ b/trunk/test/CMakeLists.txt
@@ -32,7 +32,8 @@ set (OM_BOXTEST_NAMES
   VecFullTest
   VecTest
   VecMonthly
-  Larviciding
+  NoMPDLarviciding
+  SimpleMPDLarviciding
 )
 # tests with broken checkpointing:
 set (OM_BOXTEST_NC_NAMES)
